--- a/AspNetCoreWebAppRazor/appsettings.json
+++ b/AspNetCoreWebAppRazor/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "segreto" : "password segreta nel file di configurazione di produzione"
 }
