--- a/AspNetCoreWebAppRazor/appsettings.Development.json
+++ b/AspNetCoreWebAppRazor/appsettings.Development.json
@@ -5,5 +5,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "segreto": "password segreta nel file di configurazione di sviluppo"
 }
