Aggiunto stessa chave con valore diverso in variabili di ambiente

--- a/AspNetCoreWebAppRazor/Properties/launchSettings.json
+++ b/AspNetCoreWebAppRazor/Properties/launchSettings.json
@@ -1,7 +1,7 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:56500",
       "sslPort": 0
@@ -12,16 +12,17 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
+        "segreto": "il segreto delle variabili di ambiente",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "AspNetCoreWebAppRazor": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
