--- a/AccessoDatabase/appsettings.json
+++ b/AccessoDatabase/appsettings.json
@@ -3,5 +3,5 @@
     "DefaultConnection": "xxx-yyy-zzz"
   },
   "Author": "Mauro Rainis",
-  "Segreto": "Super secret password"
+  "Segreto": "Inserisci qua la password di produzione"
 }
