Leggo i dati di connessione al db dal file di configurazione
Inserito segnaposto variabili nel file di configurazione di produzione

--- a/AccessoDatabase/appsettings.json
+++ b/AccessoDatabase/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "xxx-yyy-zzz"
+    "DefaultConnection": "xxx-yyy-zzz",
+    "SqlServer": "Inserisci qua i dati di connessione a SqlServer di produzione",
+    "PostgreSql": "Inserisci qua i dati di connessione a PostgreSql di produzione"
   },
   "Author": "Mauro Rainis",
   "Segreto": "Inserisci qua la password di produzione"
