--- a/AccessoDatabase/appsettings.development.json
+++ b/AccessoDatabase/appsettings.development.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "xxx-yyy-zzz",
-    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\mauro\\source\\repos\\_da_samsung\\AccessoDatabase\\AccessoDatabase\\BearziPersone.mdf;Integrated Security=True",
-    "PostgreSql": "Host=localhost;Username=mauro;Password=mauropostgresql;Database=bearzi"
+    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\mauro\\source\\repos\\_Bearzi\\AccessoDatabase\\AccessoDatabase\\BearziPersone.mdf;Integrated Security=True",
+    "PostgreSql": "Host=localhost;Username=mauro;Password=mauro;Database=bearzi"
   },
   "Segreto": "Super secret password for development"
 }
