Aggiunto parametri di vario tipo nel file di configurazione

--- a/AspNetCoreWebAppRazor/appsettings.json
+++ b/AspNetCoreWebAppRazor/appsettings.json
@@ -5,5 +5,9 @@
     }
   },
   "AllowedHosts": "*",
-  "segreto" : "password segreta nel file di configurazione di produzione"
+  "segreto": "password segreta nel file di configurazione di produzione",
+  "numero": 123,
+  "parola": "ciao",
+  "booleana": true,
+  "data":  "18/01/1972"
 }
